DPNG-1513: Fixed problem with overlapping other elements by header after resizing

--- a/app/ui/app/scss/main/header.scss
+++ b/app/ui/app/scss/main/header.scss
@@ -21,7 +21,6 @@ $header-item-active: $header-item;
 
 
 .navbar {
-  position: relative;
   border: none;
 
   .navbar-header {
@@ -49,6 +48,7 @@ $header-item-active: $header-item;
 
   .navbar-nav {
     > li > a {
+      float: left;
       color: $header-item;
       line-height: $header-height;
       padding-top: 0;
@@ -67,10 +67,29 @@ $header-item-active: $header-item;
   }
 
   .navbar-content {
-    position: relative;
     padding: 0;
-    margin-left: $brand-width;
     border-bottom: 2px solid rgba(0,0,0,.2);
+  }
+
+  .navbar-left {
+    position: absolute;
+    top: 0;
+    left: $brand-width;
+  }
+
+  .navbar-right {
+    margin-top: 0;
+    margin-right: 0;
+    display: -webkit-box;
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 450px;
+    a {
+      padding: 0 24px;
+      height: 55px;
+      line-height: 55px;
+    }
   }
 
   .navbar-form {
@@ -104,16 +123,6 @@ $header-item-active: $header-item;
     }
   }
 
-  .navbar-right {
-    margin-right: 0;
-
-    a {
-      padding: 0 24px;
-      height: 55px;
-      line-height: 55px;
-    }
-  }
-
 }
 
 .menu-collapsed {
@@ -134,6 +143,12 @@ $header-item-active: $header-item;
           display: inline-block;
         }
       }
+    }
+
+    .navbar-left {
+      position: absolute;
+      top: 0;
+      left: $brand-width-collapsed;
     }
 
     .navbar-header {
